# openaq-anomaly-prediction

./: .env_example  .envrc  .gitignore  Makefile  README.md  main.py  openaq_download.py  openmeteo_download.py  pyproject.toml
.github/workflows/: ci.yaml
dbt_transformation/: .user.yml  dbt_project.yml  profiles.yml
dbt_transformation/models/serving/: _serving_models.yml
dbt_transformation/models/sources/: src_openaq.yml
dbt_transformation/models/staging/: _src_sources.yml
dbt_transformation/models/staging/_openaq/: _stg_openaq__models.yml  stg_openaq__locations.sql  stg_openaq__measurements.sql  stg_openaq__sensors.sql
dbt_transformation/models/staging/_openmeteo/: _stg_openmeteo__models.yml  stg_openmeteo__historical.sql
examples/: .env_example
notebooks/: OpenAQ_DatasetAnalysis.ipynb  OpenAQ_Filter_complete_dataset_(parquet).ipynb  concatenate_everything.ipynb  download_from_api.ipynb  eda.ipynb  eda_int_new_delhi.ipynb  eda_seoul.ipynb  eda_seoul_int.colab.ipynb  eda_seoul_int.ipynb  eda_seoul_int_colab2.ipynb  int_create_parquets.ipynb  open_meteo.ipynb  test.ipynb  transform_to_mart.ipynb
scripts/: openaq_download.py  openaq_download_range.py  openmeteo_download.py
src/openaq_anomaly_prediction/config/: __init__.py  config.py
src/openaq_anomaly_prediction/load/: gcp.py  openaq.py  openmeteo.py
src/openaq_anomaly_prediction/load/schemas/: base_table.py  locations.py  measurements.py  openaq_locations.py  openaq_measurements.py  openaq_sensors.py  openmeteo_historical.py  sensors.py
src/openaq_anomaly_prediction/utils/: helpers.py  logger.py  logging.py
